[metadata]
name = twobee
description = A simple 2bit file viewer and reader library, built for and with Textual.
version = attr: twobee.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/twobee
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: MIT License
license_files = LICENCE
keywords = terminal, library, 2bit, dna, bioinformatics, viewer
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Terminals
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/twobee/blob/main/README.md
    Source = https://github.com/davep/twobee
    Issues = https://github.com/davep/twobee/issues
    Discussions = https://github.com/davep/twobee/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires = textual==0.13.0
python_requires = >=3.8

[options.package_data]
twobee = py.typed

[options.entry_points]
console_scripts =
    twobee = twobee.chui.app:run

### setup.cfg ends here
